feat(file): enter doc, quit doc
